--- a/packages/client/offline.html
+++ b/packages/client/offline.html
@@ -6,6 +6,6 @@
   </head>
   <body>
     You are not connected to the internet!
-    <script type="module" src="src/index.tsx"></script>
+    <script type="module" src="./src/entry-client.tsx"></script>
   </body>
 </html>
