--- a/packages/client/index.html
+++ b/packages/client/index.html
@@ -7,7 +7,7 @@
     <title>Tamagotchi</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="src/index.tsx"></script>
+    <div id="root"><!--ssr-outlet--></div>
+    <script type="module" src="./src/entry-client.tsx"></script>
   </body>
 </html>
